# slay_seminars

./: CSR_matrix_class.h  README.md  chebyshev acceleration.h  conjugate gradien method.h  dense_matrix_class.h  gaussseidel.h  jacobi_method.h  qr_decomposition.h  simple iteration (jacobi method).h
lab1/: CMakeLists.txt  progonka.cpp
